--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
 
     <string name="slide_4_title">World Travel</string>
     <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
-
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
     <string name="forgot_password">Forgot Password</string>
@@ -33,4 +32,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_right_drawer">Right Drawer</string>
+    <string name="android_studio_android_com">android.studio@android.com</string>
 </resources>
